--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Табло работ отдела СпиСИ</title>
+    <title>Табло работ отдела СПиСИ</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -140,7 +140,7 @@
         <!-- Блок 1: Отдел СпиСИ -->
         <div class="block block-department">
             <div class="department-info">
-                <h1 id="dept-title">ОТДЕЛ СПИСИ</h1>
+                <h1 id="dept-title">Отдел СПиСИ</h1>
                 <p id="dept-subtitle1">Системы поддержки и сопровождения информации</p>
                 <p id="dept-subtitle2">Текущий статус работ</p>
             </div>
@@ -159,13 +159,13 @@
         
         <!-- Блок 3: ДОКСП -->
         <div class="block block-doksp">
-            <div class="block-header">ДОКСП</div>
+            <div class="block-header">ДокСП</div>
             <div class="orders-container" id="doksp"></div>
         </div>
         
         <!-- Блок 4: ДОКСИ -->
         <div class="block block-doksi">
-            <div class="block-header">ДОКСИ</div>
+            <div class="block-header">ДокСИ</div>
             <div class="orders-container" id="doksi"></div>
         </div>
     </div>
