--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
             <div class="orders-container" id="sp"></div>
         </div>
         
-        <!-- Блок 3: ДОКСП -->
+        <!-- Блок 3: Документы СП -->
         <div class="block block-doksp">
-            <div class="block-header">ДокСП</div>
+            <div class="block-header">Документы СП</div>
             <div class="orders-container" id="doksp"></div>
         </div>
         
-        <!-- Блок 4: ДОКСИ -->
+        <!-- Блок 4: Документы СИ -->
         <div class="block block-doksi">
-            <div class="block-header">ДокСИ</div>
+            <div class="block-header">Документы СИ</div>
             <div class="orders-container" id="doksi"></div>
         </div>
     </div>
