--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <p id="dept-subtitle2">Текущий статус работ</p>
             </div>
             <div class="logo-container">
-                <div class="logo-text" id="logo-text">Логотип отдела</div>
+            <!--<div class="logo-text" id="logo-text">Логотип отдела</div> -->
                 <img id="logo-img" src="logo.png" alt="Логотип отдела СпиСИ">
                 <p id="dept-status">Работы выполняются в штатном режиме</p>
             </div>
